--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="navbar bg-light">
+      <%= link_to 'Simple Airbnb', flats_path %>
+      <%= link_to 'Add flat', new_flat_path, class: "btn btn-outline-primary" %>
+    </div>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+
+  <script src="https://kit.fontawesome.com/68b182730c.js" crossorigin="anonymous"></script>
   </body>
 </html>
