--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Flats#new</h1>
-<p>Find me in app/views/flats/new.html.erb</p>
+<div class="container">
+  <h1>Add new flat</h1>
+  <%= simple_form_for @flat do |f| %>
+    <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :description %>
+    <%= f.input :price_per_night %>
+    <%= f.input :number_of_guests %>
+    <%= f.submit nil, class: "btn btn-outline-primary" %>
+  <% end %>
+</div>
